2005-09-02  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (_wrap_pyg_type_register): Don't crash
	when registering non-types.

	* tests/test_subtype.py: Test registering non-types raises
	TypeError.

	Fixes #315100: "gobject.type_register crashes if parameter is not
	a type."

2005-09-02  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/gobjectmodule.c: (pyg_signal_list_names):
	Also include interfaces, fixes #315038

2005-09-02  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: post release version bump

	* Changelog.pre-2-8: Move old changelog
