@@ -1,3 +1,10 @@
+2005-09-02  Johan Dahlin  <jdahlin@async.com.br>
+
+	* gobject/pygparamspec.c (pyg_param_spec_getattr): Sort all attributes
+	alphabetically, like python does. Set default value to None
+	(pyg_param_spec_getattr): Add default_values fallback, for backwards
+	compatibility.
+
 2005-09-02  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* gobject/gobjectmodule.c (_wrap_pyg_type_register): Don't crash
